--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body  class="mat-typography" style="background-image: url(assets/den.jpg); background-repeat: no-repeat; background-size: cover;" >
+<body  class="mat-typography" style="background-image: url(assets/car2.jpg); background-repeat: no-repeat; background-size: cover;" >
   <app-root></app-root>
 </body>
 </html>
